Fix extra whitespace on the right

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,15 +1,20 @@
 /**
  * Reset some basic elements
  */
+html, body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
  body, h1, h2, h3, h4, h5, h6,
  p, blockquote, pre, hr,
  dl, dd, ol, ul, figure {
    margin: 0 auto;
    padding: 0;
- 
  }
- 
- 
+  
  
  /**
   * Basic styling
