--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -28,7 +28,7 @@ nav {
 
       @media #{$small} {
         float: right;
-        text-align: right;
+        padding-right: 2rem;
       }
   
       li {
